Bug 168420 - Tabs not working for Slide Properties
Summary: Tabs not working for Slide Properties
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Heiko Tietze
URL:
Whiteboard: target:26.2.0
Keywords: regression
Depends on:
Blocks: VT<6
  Show dependency treegraph
 
Reported: 2025-09-15 13:02 UTC by Heiko Tietze
Modified: 2025-09-15 15:05 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Heiko Tietze 2025-09-15 13:02:58 UTC
"Tab Page ID not known" caused by renaming the tab label. Introduced with bug 167862
Comment 1 Commit Notification 2025-09-15 15:05:10 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f6f3f2cb61f471cc312444906cedd031af663bd8

Resolves tdf#168420 - Vertical tabs not working for Slide Properties

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.