Resolves tdf#168420 - Vertical tabs not working for Slide Properties

Change-Id: I6290ebfc06811c7a7fa40b26425f590f40ed8c7d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/190973
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>